--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 
 body {
   color: black;
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
 }
 
 /* Header Container Styles */
@@ -22,16 +22,16 @@ body {
   z-index: 5;
 }
 
-.header__container .logo__title{
-    text-decoration: none;
-    color: inherit;
-    display: block;
-    width: 40%;
-    font-size: 28px;
-    font-weight: bold;
-    font-family: inherit;
-    text-align: center;
-    padding-top: 20px;
+.header__container .logo__title {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+  width: 40%;
+  font-size: 28px;
+  font-weight: bold;
+  font-family: inherit;
+  text-align: center;
+  padding-top: 20px;
 }
 
 /* Navbar Styles */
@@ -43,182 +43,328 @@ body {
 }
 
 .navbar li {
-    display: inline-block;
-    margin: 10px;
+  display: inline-block;
+  margin: 10px;
+  position: relative;
 }
 
+.navbar li::after {
+  content: "";
+  position: absolute;
+  background: black;
+  width: 0;
+  height: 3px;
+  left: 0;
+  bottom: -5px;
+}
+
+.navbar li:hover::after {
+  width: 100%;
+  transition: width 0.3s ease-in;
+}
 .navbar a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 /* Main Content Section */
 
-.main_content__section{
-    background-color: #4dbd90;
-    width: 100%;
-    height: 500px;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row-reverse;
+.main_content__section {
+  background-color: #4dbd90;
+  width: 100%;
+  height: 500px;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row-reverse;
 }
 
 .main_metric__img {
-    width: 65%;
-    padding-top: 60px;
+  width: 65%;
+  padding-top: 60px;
 }
 
-.content__section{
-    width: 50%;
-    text-align: start;
+.content__section {
+  width: 50%;
+  text-align: start;
 }
 
-.img_section{
-    width: 50%;
-    display: inline-block;
-    margin-top: 90px;
+.img_section {
+  width: 50%;
+  display: inline-block;
+  margin-top: 90px;
 }
 
-.content__section .section__title{
-    color: white;
-    width: 60%;
-    margin-top: 150px;
-    margin-left: 250px;
-    font-size: 36px;
+.content__section .section__title {
+  color: white;
+  width: 60%;
+  margin-top: 150px;
+  margin-left: 250px;
+  font-size: 36px;
 }
 
-.content__section .section__description{
-    width: 60%;
-    padding-left: 250px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    color: white;
-    font-size: 18px;
+.content__section .section__description {
+  width: 60%;
+  padding-left: 250px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: white;
+  font-size: 18px;
 }
 
 .content__section .signup_btn {
-    margin-left: 250px;
-    color: white;
-    background-color: black;
-    padding: 15px 30px;
-    border-radius: 3px;
+  margin-left: 250px;
+  color: white;
+  background-color: black;
+  padding: 15px 30px;
+  border-radius: 3px;
 }
 
 .content__section .signup_btn:hover {
-    cursor: pointer;
-    background-color: #489fd9;
-    color: white;
-    border: none;
+  cursor: pointer;
+  background-color: #489fd9;
+  color: white;
+  border: none;
 }
 
-.content__section .learn_more__btn{
-    border: 2px solid black;
-    background-color: transparent;
-    padding: 15px 30px;
-    border-radius: 3px;
-    margin-left: 10px;
+.content__section .learn_more__btn {
+  border: 2px solid black;
+  background-color: transparent;
+  padding: 15px 30px;
+  border-radius: 3px;
+  margin-left: 10px;
 }
 
-.content__section .learn_more__btn:hover{
-    cursor: pointer;
-    background-color: #489fd9;
-    color: white;
-    border: none;
+.content__section .learn_more__btn:hover {
+  cursor: pointer;
+  background-color: #489fd9;
+  color: white;
+  border: none;
 }
 
-.company__section{
-    width: 100%;
-    height: 150px;
-    background-color: #4dbd90;
-    position: relative;
+.company__section {
+  width: 100%;
+  height: 150px;
+  background-color: #4dbd90;
+  position: relative;
 }
 
-.bg_layout__container{
-    width: 100%;
-    height: 150px;
-    background-color: black;
-    opacity: 0.5;
+.bg_layout__container {
+  width: 100%;
+  height: 150px;
+  background-color: black;
+  opacity: 0.5;
 }
-.layout__container{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    text-align: center;
-    vertical-align: middle;
-
-}
-
-.layout__container .layout__img{
-    width: 10%;
-    display: inline-block;
-    margin: 0 10px;
-    opacity: 1;
-    color: white;
-    /* color: white; */
+.layout__container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  vertical-align: middle;
 }
 
-.company__content{
-    text-transform: uppercase;
-    color: white;
-    padding-top: 25px;
-    opacity: 0.3;
+.layout__container .layout__img {
+  width: 10%;
+  display: inline-block;
+  margin: 0 10px;
+  opacity: 1;
+  color: white;
+  /* color: white; */
+}
+
+.company__content {
+  text-transform: uppercase;
+  color: white;
+  padding-top: 25px;
+  opacity: 0.3;
 }
 
 /* Feature Section Styles */
 
-.feature__container{
-    margin-top: 80px;
+.feature__container {
+  margin-top: 80px;
 }
 
-.features__section{
-    width: 60%;
-    margin: 0 auto;
-    text-align: center;
+.features__section {
+  width: 70%;
+  margin: 0 auto;
+  text-align: center;
 }
 
-.features__section .title{
-    font-size: 28px;
-    margin-top: 70px;
+.features__section .title {
+  font-size: 28px;
+  margin-top: 70px;
 }
 
-.features__section .desc{
-    font-size: 18px;
-    font-weight: 100;
-    margin-top: 10px;
+.features__section .desc {
+  font-size: 14px;
+  font-weight: 400;
+  margin-top: 10px;
+  width: 100%;
 }
 
 .features__section .desc span {
-    font-weight: bold;
+  font-weight: bold;
 }
 
-.feature__container .content__section{
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
+.feature__container .content__section {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
 }
 
-.feature__container .content__section:nth-child(even){
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row-reverse;
+.feature__container .content__section:nth-child(even) {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row-reverse;
 }
 
-.feature__container .content__section img{
-    width: 50%;
-    height: 50%;
+.feature__container .content__section img {
+  width: 50%;
+  height: 50%;
 }
 
-.feature__container .content__section .content{
-    margin: 40px;
+.feature__container .content__section .content {
+  /* margin: 40px; */
+  padding: 40px 20px;
 }
 
 .feature__container .content__section .content .title {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
-.feature__container .content__section i{
-    margin: 0;
+.feature__container .content__section i {
+  margin: 0;
+}
+
+/* Feature Highlights Container Styles */
+
+.feature__highlights__container {
+  display: flex;
+  justify-content: space-around;
+  text-align: start;
+  margin: 80px 0;
+  flex-wrap: wrap;
+}
+
+.feature__highlights {
+  width: 25%;
+}
+.feature__highlights .logo {
+  width: 15%;
+}
+
+.feature__highlights .title {
+  margin: 10px 0;
+  font-size: 20px;
+}
+
+.feature__highlights .desc {
+  width: 90%;
+}
+
+
+/* Plans & Pricing Section */
+
+.plans__section{
+    background-color: #DDE7ED;
+    width: 100%;
+    height: 600px;
+}
+
+.plans__section .title{
+    text-align: center;
+    padding-top: 70px;
+    font-size: 28px;
+    font-weight: 400;
+}
+
+.plans__section .desc{
+    text-align: center;
+    padding-top: 10px;
+    font-size: 18px;
+    font-weight: 200;
+}
+
+.plans__section .desc span{
+    font-weight: 500;
+}
+
+.plans{
+    width: 70%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+    margin-bottom: 15px;
+}
+
+.plan{
+    width: 25%;
+    background-color: #fff;
+    margin: 20px;
+    /* height: 300px; */
+    border-radius: 5px;
+}
+
+.plan .title{
+    padding: 20px 20px;
+    text-align: start;
+    font-size: 20px;
+    font-weight: 900;
+}
+
+.plan span{
+    color: #489fd9;
+    font-weight: bold;
+    font-size: 21px;
+}
+
+.plan .pricing{
+    padding-left: 20px;
+    padding-bottom: 5px;
+    font-size: 14px;
+}
+
+
+.plan hr{
+    width: 40%;
+    margin-left: 20px;
+    margin-top: 5px;
+}
+
+.plan .desc{
+    text-align: start;
+    padding-left: 20px;
+    padding-bottom: 2px;
+    font-size: 14px;
+    font-weight: 300;
+}
+
+.not__available{
+    text-decoration: line-through;
+    opacity: 0.5;
+}
+
+.plan .desc span{
+    color: black;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.plan .plan__btn{
+    border: none;
+    background-color: black;
+    color: white;
+    width: 80%;
+    display: block;
+    margin: 15px auto 30px;
+    padding: 10px 30px;
+    border-radius: 5px;   
+}
+
+.plan .plan__btn:hover{
+    cursor: pointer;
 }
